# gol-wasm

./: Cargo.toml  LICENSE_MIT
frontend/: README.md  UniverseRenderer.ts  index.html  index.js  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/FPSTimer/: FPSTimer.ts
frontend/SeededRandom/: SeededRandom.ts
frontend/Universe/: Universe.ts  types.ts
frontend/UniverseRenderer/: UniverseRenderer.ts
src/: lib.rs  utils.rs
src/random_seed/: Cargo.toml
src/random_seed/src/: lib.rs
